# swpp202401-interpreter

./: .gitignore  Cargo.toml  README.md  cost.txt  test.sh
src/: common.rs  error.rs  function.rs  inst.rs  lib.rs  logger.rs  memory.rs  parser.rs  program.rs  register.rs  word.rs
src/parser/: block.rs  common.rs  function.rs  inst.rs  reg.rs
