[package]
name = "swpp_interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# byteorder = "1.5.0"
derive-name = "1.1.0"
derive-new = "0.6.0"
nom = "7.1.3"
text_io = "0.1.12"
# rangemap = "1.5.1"
# regex = "1.10.4"

[features]
log = []